--- a/tpa.css
+++ b/tpa.css
@@ -1,18 +1,13 @@
-/* body { */
-/* 	background-image: url("background.jpg"); */
-/* 	background-repeat: no-repeat; */
-/* } */
-
-ul#samples1 {
+div#left {
 	position: relative;
-	top: -800px;
+	top: -880px;
 	left: 50px;
 	width: 200px;
 }
 
-ul#samples2 {
+div#right {
 	position: relative;
-	top: -1175px;
+	top: -1350px;
 	left: 680px;
 	width: 200px;
 }
